fix spacing of movie ratings and sources in modal

--- a/src/component/MovieData/MovieData.scss
+++ b/src/component/MovieData/MovieData.scss
@@ -12,22 +12,11 @@
     height: 90%;
     border-radius: 4px;
   }
-
-  .zg-movie-title {
-    font-size: 15px;
-    margin: auto;
-    padding: 5px 0;
-    top: 15%;
-    width: 80%;
-    height: 50%;
-    color: white;
-    overflow: hidden;
-  }
 }
 
 .zg-movie-data-modal {
   height: 500px;
-  width: 300px;
+  width: 312px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     .zg-modal-poster {
       margin: 20px;
       border-radius: 7px;
@@ -45,12 +35,24 @@
     }
 
     .zg-movie-ratings {
+      background: yellow;
       display: flex;
       flex-direction: row;
       padding: 20px;
+      border: 1px solid rgb(67, 67, 67);
+      font-size: 12px;
+      margin-right: 0px;
+
       .zg-movie-rating {
+        background: rgb(0, 255, 0);
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        padding: 0 4px;
+        .zg-rating-value {
+          padding-bottom: 8px;
+        }
+        .zg-rating-source {
+        }
       }
     }
   }
@@ -65,14 +67,12 @@
 @media only screen and (min-width: 501px) {
   .zg-movie-data-container {
     max-width: 169px;
+    padding: 0;
+    margin-top: 10px;
     .zg-movie-poster {
-      // margin-top: 10px;
       height: 250px;
       width: 169px;
       border-radius: 4px;
-    }
-
-    .zg-movie-title {
     }
   }
 
@@ -81,7 +81,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 500px;
-    width: 500px;
+    width: 600px;
     .zg-poster-and-ratings {
       display: flex;
       flex-direction: row;
@@ -92,9 +92,15 @@
         border-radius: 7px;
       }
       .zg-movie-ratings {
+        // margin-right: 20px;
         .zg-movie-rating {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
+          .zg-rating-value {
+            padding-bottom: 8px;
+          }
+          .zg-rating-source {
+          }
         }
       }
     }
